# xengine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  xengine.sln
demo/: CMakeLists.txt  demo.vcxproj  demo.vcxproj.filters  main.cpp  scene1.cpp  scene2.cpp  scenes.h
xengine/: CMakeLists.txt  xengine.cpp  xengine.h  xengine.vcxproj  xengine.vcxproj.filters
xengine/camera/: camera.cpp  camera.h  eular_camera.cpp  eular_camera.h
xengine/geometry/: aabb.cpp  aabb.h  camera.cpp  camera.h  constant.h  frustum.cpp  frustum.h  object.cpp  object.h
xengine/graphics/: bloom_renderer.cpp  bloom_renderer.h  cubic_capture.cpp  cubic_capture.h  deferred_renderer.cpp  deferred_renderer.h  downsample_renderer.cpp  downsample_renderer.h  forward_renderer.cpp  forward_renderer.h  frame_buffer.cpp  frame_buffer.h  gaussian_blur_renderer.cpp  gaussian_blur_renderer.h  general_renderer.cpp  general_renderer.h  ibl_renderer.cpp  ibl_renderer.h  light.cpp  light.h  material.cpp  material.h  material_loader.cpp  material_loader.h  material_manager.cpp  material_manager.h  motion_blur_renderer.cpp  motion_blur_renderer.h  ogl_status.cpp  ogl_status.h  particle_system.cpp  particle_system.h  post_renderer.cpp  post_renderer.h  render_command.cpp  render_command.h  render_command_manager.cpp  render_command_manager.h  renderer.cpp  renderer.h  (+18 more)
xengine/graphics/capture/: cubic_capture.cpp  cubic_capture.h
xengine/graphics/command/: render_command.h  render_command_manager.h
xengine/graphics/frame_buffer/: frame_buffer.cpp  frame_buffer.h
xengine/graphics/light/: light.cpp  light.h  parallel_light.cpp  parallel_light.h  point_light.cpp  point_light.h  shadow.cpp  shadow.h
xengine/graphics/material/: material.cpp  material.h  material_manager.cpp
xengine/graphics/particle_system/: particle_system.cpp  particle_system.h
xengine/graphics/platform/: ogl_status.cpp  ogl_status.h
xengine/graphics/renderer/: bloom_renderer.cpp  bloom_renderer.h  deferred_renderer.cpp  deferred_renderer.h  downsample_renderer.cpp  downsample_renderer.h  effect_renderer.cpp  effect_renderer.h  forward_renderer.cpp  forward_renderer.h  gaussian_blur_renderer.cpp  gaussian_blur_renderer.h  general_renderer.cpp  general_renderer.h  ibl_renderer.cpp  ibl_renderer.h  motion_blur_renderer.cpp  motion_blur_renderer.h  post_renderer.cpp  post_renderer.h  render_config.cpp  render_config.h  renderer.cpp  renderer.h  ssao_renderer.cpp  ssao_renderer.h
xengine/graphics/shader/: shader.cpp  shader.h  shader_manager.cpp  shader_manager.h
xengine/graphics/shadow/: parallel_shadow.cpp  parallel_shadow.h  shadow.cpp  shadow.h
xengine/graphics/texture/: texture.cpp  texture.h  texture_manager.cpp
xengine/graphics/uniform_buffer/: uniform_block.cpp  uniform_block.h  uniform_buffer.cpp
xengine/mesh/: mesh.cpp  mesh.h  mesh_loader.cpp  mesh_loader.h  mesh_manager.cpp  mesh_manager.h  primitive.cpp  primitive.h
xengine/mesh/primitive/: circle.cpp  circle.h  cube.cpp  cube.h  line_strip.cpp  line_strip.h  plane.cpp  plane.h  quad.cpp  quad.h  scale_field.cpp  scale_field.h  sphere.cpp  torus.h  (+2 more)
xengine/model/: model.cpp  model.h  model_loader.cpp  model_loader.h  model_manager.cpp  model_manager.h  object.cpp  object.h  skybox.cpp  skybox.h
xengine/scene/: scene.cpp  scene.h
xengine/ui/: ui.cpp  ui.h
xengine/utility/: configure.cpp  configure.h  counter.cpp  counter.h  file_system.cpp  file_system.h  hash.h  log.cpp  log.h  random.cpp  random.h  smart_handle.cpp  smart_handle.h  time.cpp  time.h
(+23 files in other folders)
